--- a/问题记录.md
+++ b/问题记录.md
@@ -21,9 +21,35 @@ RUN npm install -g cnpm --registry=https://registry.npm.taobao.org
 WORKDIR $WORK_DIR
 ```
 
-写了一个安装 node.js 的 Dockerfile，遇到了两个个问题：
+**写了一个安装 node.js 的 Dockerfile，遇到了两个个问题：**
 
 - 安装 nvm 的时候会自动安装一个 node.js
 - `--registry=https 提示不支持`
 
 这是跟直接在 Ubuntu 容器里执行这些命令不同的地方。同样的命令为什么会出现这样的差异？
+
+**解决方案：**
+
+- 安装 nvm 的时候会自动安装一个 node.js 是因为此版本的 nvm 中 `NODE_VERSION` 是环境变量。
+
+- `--registry=https 提示不支持`，把最后一条命令放到上面一起就好了，原因未知。
+
+```
+FROM ubuntu:18.04
+MAINTAINER stormxing <stormxing@foxmail.com>
+
+ENV NODE_VERSION 10.0.0
+ENV WORK_DIR /worksapce
+
+RUN apt-get update \
+    && apt-get install -y curl \
+    && curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.11/install.sh | bash \
+    && export NVM_DIR="$HOME/.nvm" \
+    && [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" \
+    && nvm install v$NODE_VERSION \
+    && nvm use v$NODE_VERSION \
+    && nvm alias default v$NODE_VERSION \
+    && npm install -g cnpm --registry=https://registry.npm.taobao.org
+
+WORKDIR $WORK_DIR
+```
