--- a/问题记录.md
+++ b/问题记录.md
@@ -1,11 +1,17 @@
 ## RUN 命令问题
 
+**写了一个安装 node.js 的 Dockerfile，遇到了两个问题：**
+
+- 安装 nvm 的时候会自动安装一个 node.js
+- `--registry=https 提示不支持`
+
+这是跟直接在 Ubuntu 容器里执行这些命令不同的地方。同样的命令为什么会出现这样的差异？
 
 ```
 FROM ubuntu:18.04
 MAINTAINER stormxing <stormxing@foxmail.com>
 
-ENV NODE_VERSION 8.11.1
+ENV NODE_VERSION v8.11.1
 ENV WORK_DIR /worksapce
 
 RUN apt-get update \
@@ -14,19 +20,12 @@ RUN apt-get update \
     && export NVM_DIR="$HOME/.nvm" \
     && [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" \
     && nvm install $NODE_VERSION \
-    && nvm use v$NODE_VERSION \
-    && nvm alias default v$NODE_VERSION \
+    && nvm use $NODE_VERSION \
+    && nvm alias default $NODE_VERSION \
 RUN npm install -g cnpm --registry=https://registry.npm.taobao.org
 
 WORKDIR $WORK_DIR
 ```
-
-**写了一个安装 node.js 的 Dockerfile，遇到了两个个问题：**
-
-- 安装 nvm 的时候会自动安装一个 node.js
-- `--registry=https 提示不支持`
-
-这是跟直接在 Ubuntu 容器里执行这些命令不同的地方。同样的命令为什么会出现这样的差异？
 
 **解决方案：**
 
@@ -38,7 +37,7 @@ WORKDIR $WORK_DIR
 FROM ubuntu:18.04
 MAINTAINER stormxing <stormxing@foxmail.com>
 
-ENV NODE_VERSION 10.0.0
+ENV NODE_VERSION v8.11.1
 ENV WORK_DIR /worksapce
 
 RUN apt-get update \
@@ -46,9 +45,9 @@ RUN apt-get update \
     && curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.11/install.sh | bash \
     && export NVM_DIR="$HOME/.nvm" \
     && [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" \
-    && nvm install v$NODE_VERSION \
-    && nvm use v$NODE_VERSION \
-    && nvm alias default v$NODE_VERSION \
+    && nvm install $NODE_VERSION \
+    && nvm use $NODE_VERSION \
+    && nvm alias default $NODE_VERSION \
     && npm install -g cnpm --registry=https://registry.npm.taobao.org
 
 WORKDIR $WORK_DIR
