add docker-machine problem

--- a/问题记录.md
+++ b/问题记录.md
@@ -1,4 +1,4 @@
-## RUN 命令问题
+## Dockerfile 问题
 
 **写了一个安装 node.js 的 Dockerfile，遇到了两个问题：**
 
@@ -49,3 +49,13 @@ RUN apt-get update \
 
 WORKDIR $WORK_DIR
 ```
+
+## docker-machine 问题
+
+- docker-machine 无法使用 hyper 创建 machine：
+
+用 `docker-machine create -d hyperv docker-vm` 命令创建 docker-machine 报错：`"Hyper-V PowerShell Module is not available"`
+
+- 解决方案：
+
+https://github.com/docker/machine/issues ，这个问题在官方仓库里被提了很多次了，依然无解，我尝试降低 docker-machine 的版本，但还是没用，暂时只能用 VirtualBox 了。
