add vagrant problem

--- a/问题记录.md
+++ b/问题记录.md
@@ -50,6 +50,25 @@ RUN apt-get update \
 WORKDIR $WORK_DIR
 ```
 
+## vagrant 问题
+
+- vagrant 创建 虚拟机失败：
+
+```
+default: Warning: Remote connection disconnect. Retrying...
+default: Warning: Remote connection disconnect. Retrying...
+```
+
+- 解决方案：
+
+vagrant 和 VirtualBox 对彼此版本的要求极为苛刻，适当的组合才可以使用，`vagrant_1.9.0 + VirtualBox-5.1.30.18389-Win` 可用
+
+>参考：https://blog.csdn.net/u014103733/article/details/79199718
+
+如果出现 `rsync not found` 则要自己去下 box，手动添加。
+
+>参考：https://blog.csdn.net/gaoxuaiguoyi/article/details/79017233
+
 ## docker-machine 问题
 
 - docker-machine 无法使用 hyper 创建 machine：
