add nginx problem

--- a/常用命令.md
+++ b/常用命令.md
@@ -38,3 +38,25 @@ $ {Run this command to configure your shell:}
 ```
 $ docker-machine help
 ```
+
+## docker swarm
+
+- 查看初始化命令行参数
+
+```
+$ docker swarm init --help
+```
+
+- 创建 manager 节点
+
+```
+$ docker swarm init --advertise-addr={ip}
+```
+
+>执行完后复制下创建 workr 的命令
+
+- 查看 ip (选用 192.168 开头的)
+
+```
+$ pa a  
+```
