--- a/问题记录.md
+++ b/问题记录.md
@@ -78,3 +78,11 @@ vagrant 和 VirtualBox 对彼此版本的要求极为苛刻，适当的组合才
 - 解决方案：
 
 https://github.com/docker/machine/issues ，这个问题在官方仓库里被提了很多次了，依然无解，我尝试降低 docker-machine 的版本，但还是没用，暂时只能用 VirtualBox 了。
+
+## nginx 镜像问题
+
+- [官方 nginx ](https://hub.docker.com/_/nginx/)配置文件的目录 `/etc/nginx/nginx.conf` 无法挂载数据卷
+
+- 解决方案：
+
+官方文档的 nginx 配置文件目录写错了，应该是 `/usr/nginx/conf.d`
