add swarm service cmd

--- a/常用命令.md
+++ b/常用命令.md
@@ -60,3 +60,27 @@ $ docker swarm init --advertise-addr={ip}
 ```
 $ pa a  
 ```
+
+- 创建服务
+
+```
+$ docker service create {name}
+```
+
+- 查看正在运行的服务
+
+```
+$ docker service ps {name}
+```
+
+- 横向扩展服务
+
+```
+$ docker service scale {name}={number}
+```
+
+- 删除服务
+
+```
+$ docker service rm {name}
+```
