fixed nginx problem

--- a/问题记录.md
+++ b/问题记录.md
@@ -85,4 +85,4 @@ https://github.com/docker/machine/issues ，这个问题在官方仓库里被提
 
 - 解决方案：
 
-官方文档的 nginx 配置文件目录写错了，应该是 `/usr/nginx/conf.d`
+官方文档的 nginx 配置文件目录写错了，应该是 `/etc/nginx/conf.d`
