add jenkins problem

--- a/问题记录.md
+++ b/问题记录.md
@@ -86,3 +86,20 @@ https://github.com/docker/machine/issues ，这个问题在官方仓库里被提
 - 解决方案：
 
 官方文档的 nginx 配置文件目录写错了，应该是 `/etc/nginx/conf.d`
+
+## jenkins 启动报错
+
+- jenkins 启动时如果挂在了数据卷，会报权限错误：
+
+```
+touch: cannot touch ‘/var/jenkins_home/copy_reference_file.log’: Permission denied
+```
+
+- 解决方案：
+
+当映射本地数据卷时，/home/jenkins_home 目录的拥有者为 root 用户，而容器中 enkins user 的 uid 为 1000，修改下目录权限即可
+
+```
+$ sudo chown -R 1000:1000 /home/jenkins_home
+$ docker run -d --name jenkins -p 8090:8080 -p 50000:50000 -v /home/jenkins_home:/var/jenkins_home jenkins
+```
