补充相关示例文件和 README

--- a/问题记录.md
+++ b/问题记录.md
@@ -79,6 +79,8 @@ vagrant 和 VirtualBox 对彼此版本的要求极为苛刻，适当的组合才
 
 https://github.com/docker/machine/issues ，这个问题在官方仓库里被提了很多次了，依然无解，我尝试降低 docker-machine 的版本，但还是没用，暂时只能用 VirtualBox 了。
 
+2018.05.04 更新，已解决：[解决 docker-machine 创建虚拟机报错 Hyper-V PowerShell Module is not available](https://stormxing.com/posts/docker-p1/)
+
 ## nginx 镜像问题
 
 - [官方 nginx ](https://hub.docker.com/_/nginx/)配置文件的目录 `/etc/nginx/nginx.conf` 无法挂载数据卷
@@ -89,7 +91,7 @@ https://github.com/docker/machine/issues ，这个问题在官方仓库里被提
 
 ## jenkins 启动报错
 
-- jenkins 启动时如果挂在了数据卷，会报权限错误：
+- jenkins 启动时如果挂载了数据卷，会报权限错误：
 
 ```
 touch: cannot touch ‘/var/jenkins_home/copy_reference_file.log’: Permission denied
